build_output.txt
Reusing configuration cache.
> Task :createMinecraftArtifacts UP-TO-DATE

> Task :compileJava FAILED
./gradlew : C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-
main\src\main\java\com\raishxn\ufo\compat\jei\DimensionalMatterA
ssemblerRecipeCategory.java:170: warning: [removal] 
getTooltipStrings(T,IRecipeSlotsView,double,double) in 
IRecipeCategory has been deprecated and marked for removal
No linha:1 caractere:1
+ ./gradlew compileJava 2>&1 | Out-File -Encoding UTF8 
build_output.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (C:\Users\erick\... 
   ked for removal:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    public List<Component> 
getTooltipStrings(DimensionalMatterAssemblerRecipe recipe, 
IRecipeSlotsView recipeSlotsView, double mouseX, double mouseY) 
{
                           ^
  where T is a type-variable:
    T extends Object declared in interface IRecipeCategory
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\datagen\DataGenerators.java:15: warning: 
[removal] bus() in EventBusSubscriber has been deprecated and 
marked for removal
@EventBusSubscriber(modid = UfoMod.MOD_ID, bus = 
EventBusSubscriber.Bus.MOD)
                                           ^
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\datagen\DataGenerators.java:15: warning: 
[removal] Bus in EventBusSubscriber has been deprecated and 
marked for removal
@EventBusSubscriber(modid = UfoMod.MOD_ID, bus = 
EventBusSubscriber.Bus.MOD)
                                                                
   ^
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\datagen\ModItemTagProvider.java:37: 
error: cannot find symbol
                .add(ModItems.UFO_GREATSWORD.get());
                             ^
  symbol:   variable UFO_GREATSWORD
  location: class ModItems
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\datagen\ModItemTagProvider.java:47: 
error: cannot find symbol
                .add(ModItems.UFO_FISHING_ROD.get());
                             ^
  symbol:   variable UFO_FISHING_ROD
  location: class ModItems
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\datagen\ModItemTagProvider.java:49: 
error: cannot find symbol
                .add(ModItems.UFO_BOW.get());
                             ^
  symbol:   variable UFO_BOW
  location: class ModItems
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\event\ModCapabilityEvents.java:19: 
warning: [removal] bus() in EventBusSubscriber has been 
deprecated and marked for removal
@EventBusSubscriber(modid = UfoMod.MOD_ID, bus = 
EventBusSubscriber.Bus.MOD)
                                           ^
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\event\ModCapabilityEvents.java:19: 
warning: [removal] Bus in EventBusSubscriber has been 
deprecated and marked for removal
@EventBusSubscriber(modid = UfoMod.MOD_ID, bus = 
EventBusSubscriber.Bus.MOD)
                                                                
   ^
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\event\ModCapabilityEvents.java:89: 
error: cannot find symbol
                ModItems.UFO_HAMMER.get()
                        ^
  symbol:   variable UFO_HAMMER
  location: class ModItems
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\event\ModCapabilityEvents.java:95: 
error: cannot find symbol
                ModItems.UFO_GREATSWORD.get()
                        ^
  symbol:   variable UFO_GREATSWORD
  location: class ModItems
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\event\ModCapabilityEvents.java:101: 
error: cannot find symbol
                ModItems.UFO_FISHING_ROD.get()
                        ^
  symbol:   variable UFO_FISHING_ROD
  location: class ModItems
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\event\ModCapabilityEvents.java:107: 
error: cannot find symbol
                ModItems.UFO_BOW.get()
                        ^
  symbol:   variable UFO_BOW
  location: class ModItems
C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\mai
n\java\com\raishxn\ufo\util\ModItemProperties.java:11: error: 
cannot find symbol
        makeCustomBow(ModItems.UFO_BOW.get());
                              ^
  symbol:   variable UFO_BOW
  location: class ModItems
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
8 errors
5 warnings

[Incubating] Problems report is available at: file:///C:/Users/erick/OneDrive/Documents/UFO-Future-1.21.1-main/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\erick\OneDrive\Documents\UFO-Future-1.21.1-main\src\m
ain\java\com\raishxn\ufo\compat\jei\DimensionalMatterAssemblerRe
cipeCategory.java:170: warning: [removal] 
getTooltipStrings(T,IRecipeSlotsView,double,double) in 
IRecipeCategory has been deprecated and marked for removal
      public List<Component> 
getTooltipStrings(DimensionalMatterAssemblerRecipe recipe, 
IRecipeSlotsView recipeSlotsView, double mouseX, double mouseY) 
{
                             ^
    where T is a type-variable:
      T extends Object declared in interface IRecipeCategory
  8 errors
  5 warnings

* Try:
> Run with --scan to generate a Build Scan (Powered by 
Develocity).

BUILD FAILED in 1s
2 actionable tasks: 1 executed, 1 up-to-date
Configuration cache entry reused.
